...
                        <viewControllerLayoutGuide type="bottom" id="n40-VP-ooR"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="iXn-bI-j7I">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add New Link" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5m5-l5-YS8">
                                <rect key="frame" x="20" y="285" width="512" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3rx-6H-1W2">
                                <rect key="frame" x="540" y="280" width="40" height="40"/>
...
                            <constraint firstAttribute="leadingMargin" secondItem="5m5-l5-YS8" secondAttribute="leading" id="XCT-JL-ZPM"/>
                            <constraint firstItem="5m5-l5-YS8" firstAttribute="centerY" secondItem="iXn-bI-j7I" secondAttribute="centerY" id="pku-OM-fe1"/>
                            <constraint firstItem="3rx-6H-1W2" firstAttribute="centerY" secondItem="iXn-bI-j7I" secondAttribute="centerY" id="vbJ-g5-Kjc"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="8As-s1-ctY">
                        <barButtonItem key="leftBarButtonItem" image="menu" id="PG5-Vr-LMx"/>
                    </navigationItem>
                    <connections>
                        <outlet property="linkTextField" destination="5m5-l5-YS8" id="wyC-is-Eyp"/>
                        <outlet property="menuBarButton" destination="PG5-Vr-LMx" id="AuE-0T-1oU"/>
                    </connections>
                </viewController>
...
                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="z7g-ss-2bx" id="FVt-Td-rNb">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Shorten link" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lfO-EL-REI">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                        <rect key="frame" x="0.0" y="72" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qe3-l8-PEM" id="D9P-Ab-XQ9">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Links" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nA1-JL-csL">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
